vnx-srv6/clabernetes/localkindCluster/conf/k8s/calico/allow-ns-only-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ns-only-ingress
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        #matchLabels:
        #   name: NAMESPACE
  policyTypes:
  - Ingress
